# z-claw

./: .gitignore  CONTRIBUTING.md  CONTRIBUTING.zh.md  Cargo.toml  LICENSE-MIT  README.md  README.zh.md  SECURITY.md  components.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.skills/github-issue/: SKILL.md
.skills/github-pr/: SKILL.md
.skills/github-pr-review/: SKILL.md
.skills/github-pr-review/references/: review-protocol.md
.trae/specs/implement-system-mcp-tools/: checklist.md  spec.md  tasks.md
apps/desktop/: components.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/scripts/: write-locale-json.mjs
apps/desktop/src/: App.css  App.tsx  main.tsx  types.ts
apps/desktop/src/components/: TitleBar.tsx
apps/desktop/src/components/layout/: ChatPanel.tsx  EventLogPanel.tsx  Sidebar.tsx
apps/desktop/src/components/modals/: AgentProfileSheet.tsx  InspectorDrawer.tsx  SettingsDrawer.tsx
apps/desktop/src/lib/: config-snapshot-view.tsx  export-markdown.ts  i18n.ts  kernel-display.ts  transcript.test.ts  transcript.ts  ui-prefs.ts
apps/desktop/src/test/: setup.ts  transcript.test.ts
crates/z-claw/: Cargo.toml
crates/z-claw-cli/: Cargo.toml
crates/z-claw-cli/src/: main.rs
crates/z-claw-kernel/: Cargo.toml
crates/z-claw-kernel/src/: config.rs  error.rs  health.rs  kernel.rs  lib.rs  mcp_pool.rs  memory.rs  multi_agent.rs  orchestrator.rs  policy.rs  protocol.rs  scheduler.rs  workspace.rs
crates/z-claw-kernel/src/orchestrator/: delegate.rs  swarm.rs  turn.rs
crates/z-claw-kernel/src/provider/: mod.rs  openai.rs  routing.rs
openspec/: config.yaml
openspec/changes/archive/2026-04-05-fix-agent-list-selection/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-05-fix-agent-list-selection/specs/agent-selection-ui/: spec.md
openspec/changes/archive/2026-04-05-fix-agent-list-selection/specs/agent-switch-feedback/: spec.md
openspec/specs/agent-selection-ui/: spec.md
openspec/specs/agent-switch-feedback/: spec.md
scripts/: sync_skills.mjs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/locales/: en.json  zh.json
src-tauri/src/: lib.rs  main.rs
src/components/: TitleBar.tsx
src/components/ui/: combobox.tsx  command.tsx  context-menu.tsx  dropdown-menu.tsx  input-otp.tsx  item.tsx  menubar.tsx  popover.tsx  select.tsx  sheet.tsx  toggle-group.tsx
src/lib/: kernel-display.ts  transcript.ts  ui-prefs.ts
