[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/z-claw-kernel",
    "crates/z-claw-cli",
]
default-members = ["src-tauri"]

[workspace.package]
license = "MIT OR Apache-2.0"
homepage = "https://z-claw.ai/"
repository = "https://github.com/z-claw/z-claw.git"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
z-claw-kernel = { path = "crates/z-claw-kernel" }

[profile.release]
debug = "limited"
lto = "thin"
codegen-units = 1

[profile.release-fast]
inherits = "release"
debug = "full"
lto = false
codegen-units = 16

[workspace.lints.rust]
unexpected_cfgs = { level = "allow" }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
declare_interior_mutable_const = "deny"
redundant_clone = "deny"
disallowed_methods = "deny"
style = { level = "allow", priority = -1 }
type_complexity = "allow"
let_underscore_future = "allow"
single_range_in_vec_init = "allow"
too_many_arguments = "allow"
large_enum_variant = "allow"
nonminimal_bool = "allow"
