[package]
name = "z-claw"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "z-claw desktop (Tauri + React)"
authors = ["you"]

[lib]
name = "z_claw_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
z-claw-kernel = { workspace = true }
crossbeam-channel = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
workspace = true
