[package]
name = "z-claw-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "z-claw agent orchestration kernel (no UI)"

[dependencies]
async-stream = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
cron = "0.16"
crossbeam-channel = "0.5"
dirs = "6"
futures = "0.3"
futures-util = "0.3"
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
] }
rmcp = { version = "1.7.0", default-features = false, features = [
    "client",
    "transport-child-process",
] }
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1.52", features = ["full"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
aisdk = { version = "0.5.2", features = ["openaicompatible", "openai"] }
schemars = "1.2"
tiktoken-rs = "0.11"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["signal"] }

[lints]
workspace = true
